2006-04-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-spvr.scm:
	  Fixed some bugs and cleaned some code up.

	* src/kahua-spvr.scm:
	  Now the signal mask of "root" thread is restored periodically,
	  in order to avoid that the sigmask is changed unexpectedly on
	  Mac OS X 10.4.  This is a temporary step.

	* src/kahua-server.scm:
	  Set :backlog at SOMAXCONN.  Sorry that this change depends on
	  Gauche 0.8.7.

	* src/Makefile.in: Fix a lack of KAHUA_STATICDIR substitution.

2006-04-01  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm: Added kahua-call-with-current-context.

2006-03-18  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/xml.scm: Added `!exclude' pattern directive.

2006-03-16  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/elem.scm: Added node-set/ tag.

2006-03-13  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm: Fixed regist-entry-method side-effect bug.

2006-03-11  SHIBATA Tomohisa  <shibata@kahua.org>

	* ChangeLog, src/kahua/user.scm:
	Changed kahua-add-user to get optional args.

2006-03-11  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/user.scm: Changed kahua-add-user to get optional args.

2006-03-04  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4 released
	
2006-03-02  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4_pre3
	
2006-03-02  Katsutoshi Itoh  <cut-sea@kahua.org>

	* src/kahua/elem.scm
	use gauche.collection in order to be able to apply map/ for collection.
	
2006-03-01  Katsutoshi Itoh  <cut-sea@kahua.org>

	* src/kahua/persistent.scm
	Fixed kahua-serializable-object? bug.
	It was failed at dot pair,which has only serializable members.
	
2006-02-21  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4_pre2
	Fixed mistakes in branch merging.
	
2006-02-21  Nobuo Yamashita  <nobsun@sampou.org>

	* 0.4_pre1 
	Kahua-spvr multi-threaded.

2006-02-20  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Fixed '\\' in key-of value bug? (FSDB)
